main.css: Fix vert alignment of backref when URL wraps.

--- a/bootstraped/templates/main.css
+++ b/bootstraped/templates/main.css
@@ -22,6 +22,7 @@ td.label {
 
 td.fn-backrefs {
   padding-right: 5px;
+  vertical-align: baseline;
 }
 
 .fn-backref-list {
